--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html,
 body {
 	background-image: url("./assets//bg.png");
 	background-repeat: repeat;
-
+	background-size: 100%;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
 	padding-bottom: 30px;
@@ -186,6 +186,7 @@ td {
 	color: #414141;
 	float: right;
 	width: 100%;
+	font-weight: 600;
 }
 
 .mail {
