--- a/payment.css
+++ b/payment.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800&display=swap");
 
 body {
 	background-image: url("./assets//bg.png");
+	background-size: 100%;
 	background-repeat: repeat;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
@@ -28,6 +29,11 @@ body {
 	font-weight: 800;
 }
 
+.outer {
+	display: flex;
+	flex-direction: row;
+}
+
 .container {
 	margin: 0 auto;
 	padding: 48px;
@@ -39,44 +45,61 @@ body {
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
 }
 
 .container-title {
+	text-align: left;
 	color: #212121;
 	font-weight: bold;
 	font-size: 32px;
 	line-height: 40px;
+	padding-bottom: 10px;
 }
 
 .container-subtitle {
-	color: #414141;
-	font-weight: normal;
-	font-size: 14px;
+	max-width: 288px;
+	color: #212121;
 	line-height: 24px;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 24px;
+	padding-bottom: 5px;
+}
+
+.container-info {
+	color: #414141;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
 }
 
 table {
 	color: #414141;
 	margin-top: 8px;
 	font-size: 12px;
-	line-height: 18px;
+	line-height: 12px;
 	width: 100%;
 }
 
 th,
 td {
 	border-bottom: 1px solid #ccc;
+
 	font-weight: normal;
-	padding: 16px;
+	padding: 14px 0px 14px 0px;
 }
 
 .table-title {
 	color: #212121;
 	font-weight: bold;
 	font-size: 16px;
-	line-height: 24px;
+	line-height: 12px;
+}
+
+.check {
+	width: 22px;
+	height: 22px;
 }
 
 .footer {
@@ -100,6 +123,7 @@ td {
 
 .footer-right {
 	color: #414141;
+	font-weight: 600;
 	float: right;
 	width: 100%;
 }
