--- a/payment.css
+++ b/payment.css
@@ -2,7 +2,7 @@
 
 body {
 	background-image: url("./assets//bg.png");
-	background-size: 100%;
+	/* background-size: 100%; */
 	background-repeat: repeat;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
@@ -30,12 +30,15 @@ body {
 }
 
 .outer {
+	padding: 0;
+	margin: 0;
+	background-color: hotpink;
 	display: flex;
 	flex-direction: row;
+	justify-content: stretch;
 }
 
 .container {
-	margin: 0 auto;
 	padding: 48px;
 	max-width: 468px;
 	background: #ffffff;
@@ -43,9 +46,6 @@ body {
 		0px 12.5216px 10.0172px rgba(0, 0, 0, 0.055), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0655718),
 		0px 41.7776px 33.4221px rgba(0, 0, 0, 0.079074), 0px 100px 80px rgba(0, 0, 0, 0.11);
 	border-radius: 5px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 }
 
 .container-title {
@@ -100,6 +100,68 @@ td {
 .check {
 	width: 22px;
 	height: 22px;
+}
+
+.payment-form {
+	text-align: center;
+}
+
+.container-payment {
+	padding: 48px;
+	max-width: 468px;
+	background: #ffffff;
+	box-shadow: 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.030926), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0444282),
+		0px 12.5216px 10.0172px rgba(0, 0, 0, 0.055), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0655718),
+		0px 41.7776px 33.4221px rgba(0, 0, 0, 0.079074), 0px 100px 80px rgba(0, 0, 0, 0.11);
+	border-radius: 5px;
+	text-align: center;
+}
+
+.container-payment-title {
+	font-weight: bold;
+	font-size: 56px;
+	line-height: 64px;
+	color: #212121;
+	margin-bottom: 10px;
+}
+
+.container-payment-subtitle {
+	color: #414141;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 24px;
+	margin-bottom: 25px;
+}
+
+.form-control {
+	margin-bottom: 32px;
+}
+
+.container-card-info {
+	margin-top: 16px;
+	display: flex;
+	flex-direction: row;
+	flex-grow: 1;
+	flex-wrap: nowrap;
+}
+
+.middle-card {
+	margin-left: 12px;
+	margin-right: 12px;
+}
+
+.accepted-cards {
+	display: flex;
+	flex-direction: row;
+	flex-grow: 1;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	margin-bottom: 40px;
+}
+
+.accepted-card {
+	width: 64px;
+	height: 40px;
 }
 
 .footer {
