--- a/payment.css
+++ b/payment.css
@@ -2,8 +2,7 @@
 
 body {
 	background-image: url("./assets//bg.png");
-	/* background-size: 100%; */
-	background-repeat: repeat;
+	background-size: 100%;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
 	padding-bottom: 30px;
@@ -92,6 +91,7 @@ td {
 }
 
 .table-title {
+	width: 100%;
 	color: #212121;
 	font-weight: bold;
 	font-size: 16px;
@@ -154,16 +154,20 @@ td {
 }
 
 .container-card-info {
+	max-width: 468px;
 	margin-top: 16px;
 	display: flex;
 	flex-direction: row;
 	flex-grow: 1;
-	flex-wrap: nowrap;
+}
+
+.container-card {
+	width: 32%;
 }
 
 .middle-card {
-	margin-left: 12px;
-	margin-right: 12px;
+	margin-left: 2%;
+	margin-right: 2%;
 }
 
 .accepted-cards {
@@ -216,6 +220,7 @@ td {
 
 .zip {
 	margin-left: 7px;
+	max-width: 40%;
 }
 
 .buttons {
