--- a/index.css
+++ b/index.css
@@ -3,8 +3,7 @@
 html,
 body {
 	background-image: url("./assets//bg.png");
-	background-repeat: repeat;
-	background-size: 100%;
+	background-size: cover;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
 	padding-bottom: 30px;
