--- a/preloader.css
+++ b/preloader.css
@@ -5,7 +5,7 @@ body {
 	background-repeat: repeat;
 	font-family: "Poppins", "Times New Roman", Times, serif;
 	color: white;
-	background-size: 100%;
+	background-size: cover;
 	padding-bottom: 30px;
 }
 
